--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,27 @@ website:
   title: "ISSS624"
   navbar:
     left:
+      - text: Hands-on Exercises
+        menu:
+          - text: Hands-on Exercise 1
+            href: Hands-on_Ex1/Hands-on_Ex1.qmd
+          - text: Hands-on Exercise 2
+            href: Hands-on_Ex2/Hands-on_Ex2.qmd
+          - text: Hands-on Exercise 3
+            href: Hands-on_Ex3/Hands-on_Ex3.qmd
+      - text: In-Class Exercises
+        menu:
+          - text: In-class Exercise 1
+            href: In-class_Ex/In-class_Ex1/In-class_Ex1.qmd
+          - text: In-class Exercise 2
+            href: In-class_Ex/In-class_Ex2/In-class_Ex2.qmd
+          - text: In-class Exercise 3
+            href: In-class_Ex/In-class_Ex3/In-class_Ex3.qmd
+      - text: Take-home Exercises
+        menu:
+          - text: Take-home Exercise 1
+            href: Take-home_Ex1/Take-home_Exercise1.qmd
+    right:
       - href: index.qmd
         text: Home
       - about.qmd
