--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,10 +23,12 @@ website:
             href: In-class_Ex/In-class_Ex2/In-class_Ex2.qmd
           - text: In-class Exercise 3
             href: In-class_Ex/In-class_Ex3/In-class_Ex3.qmd
+          - text: In-class Exercise 4
+            href: In-class_Ex/In-class_Ex4/In-class_Ex4.qmd
       - text: Take-home Exercises
         menu:
           - text: Take-home Exercise 1
-            href: Take-home_Ex1/Take-home_Exercise1.qmd
+            href: Take-home_Exercise1/Take-home_Exercise1.qmd
     right:
       - href: index.qmd
         text: Home
