--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,7 @@ website:
           - text: In-class Exercise 4
             href: In-class_Ex/In-class_Ex4/In-class_Ex4.qmd
           - text: In-class Exercise 5
-            href: In-class_Ex/In-class_Ex5/In-class_Ex5qmd
+            href: In-class_Ex/In-class_Ex5/In-class_Ex5.qmd
       - text: Take-home Exercises
         menu:
           - text: Take-home Exercise 1
